Fix: Toolpath update in preview mode (#1127)
* Fix: Scale default canvas to fit viewport

Refactor: Auto scale to fit after origin changed

Refactor: After job setup, center canvas

Fix: Invisible object should hide in preview

Fix: Refresh toolpath after actions

Fix: Disable export after all toolpaths invisible

Fix: Fix some errors

Fix: Toolpath update in preview mode

* Fix: Save dialog select save as default

* Fix: Remove style attribute after parse it

* Fix: Fix model toolpath issues

--- a/src/app/ui/SVGEditor/index.styl
+++ b/src/app/ui/SVGEditor/index.styl
@@ -41,6 +41,7 @@
     background-color: #f5f5f7
     position: relative
     width: 100%
+    padding-left: 64px
     // height: 100%
     height: calc(100vh - 66px)
 
